# backup_plan

./: .pylintrc  README.md  __init__.py  __main__.py  backupManager.py  backupPlan.py  credentials.py  determineChanges.py  install.bat  plugins.py  pyproject.toml
.github/workflows/: flake8.yml  mypy.yml  pylint.yml  pytest.yml  python-package.yml
plugins/: install.bat
plugins/keepass_plugin/: README.md  install.bat  keepassCredentials.py  pyproject.toml
plugins/sftp_plugin/: README.md  install.bat  pyproject.toml  sftp.py
test/: test.py
