[project]
name = "backup-plan"
version = "0.1.0"
dependencies = ["paramiko"]
requires-python = ">=3.8"

[tool.pytest.ini_options]
addopts = "--cov=backup_plan --cov-report=xml --cov-report=term"

[tool.coverage.run]
branch = true
source = ["backup_plan"]

[tool.coverage.report]
show_missing = true
skip_covered = true
