[project]
name = "backup_plan-sftp"
version = "0.1.0"
description = "An sftp backup plugin for backup_plan"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name="Kurt Eilander" }
]
dependencies = ["paramiko"]

[project.entry-points."backup_plan.backup_manager"]
sftp = "sftp_plugin.sftp:Plugin"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
